Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/OrderEntry__c/OrderEntry__c.object-meta.xml
<CustomObject>
    <label>OrderEntry</label>
    <pluralLabel>OrderEntrys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>