Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/OrderEntry__c/fields/EntryNumber__c.field-meta.xml
<CustomField>
    <fullName>EntryNumber__c</fullName>
    <label>entryNumber</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>