Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/OrderEntry__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>OrderEntrys</relationshipLabel>
    <relationshipName>OrderEntrys</relationshipName>
</CustomField>