Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/OrderEntry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>OrderEntrys</relationshipLabel>
    <relationshipName>OrderEntrys</relationshipName>
</CustomField>