Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/OrderEntry__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>quantity</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>