Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/OrderEntry__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>unitPrice</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>